# zen

./: .gitignore  LICENSE.md  README.md  Zen.sln
Zen.Abstractions/: Axis.cs  Coord.cs  LogicalRange.cs  RangeOrIndex.cs  Shape.cs  ShapeEnumerator.cs  Shapes.cs  Tensor.cs  TensorRef.cs  Zen.Abstractions.csproj
Zen.CUDA/: CudaException.cs  DeviceArray.cs  DeviceTensor.cs  HostArray.cs  HostRef.cs  HostTensor.cs  Status.cs  Tensor.cs  TensorRef.cs  Utils.cs  Zen.CUDA.csproj
Zen.CUDA/Interop/: CudaRuntime.cs  LibZen.cs
Zen.CUDA/Wrappers/: CudaException.cs  CudaGraph.cs  CudaGraphInstance.cs  CudaStream.cs
Zen.Playground/: Program.cs  Zen.Playground.csproj
Zen.Playground/Examples/: ConvolutionExample.cs  CopyExample.cs  ShapeExample.cs  SliceExample.cs
Zen.Playground/Reference/: BroadcastExample.cs  MatMulExample.cs
cudalite/: CMakeLists.txt  conv.cu  cudalite.def  gemm.cu
cudalite/include/: helpers.h  kernels.h
libzen/: CMakeLists.txt  conv.cu
source/: Zen.slnx
source/Zen.Abstractions/: Layout.cs  LogicalCoord.cs  Shape.cs  Tensor.cs  TensorRef.cs  Utils.cs  Zen.Abstractions.csproj
source/Zen.CUDA/: DeviceTensor.cs  HostTensor.cs  ReferenceTensor.cs  Zen.CUDA.csproj
source/Zen.CUDA/Interop/: CudaImports.cs  CudaRuntime.cs
source/Zen.CUDA/Wrappers/: CudaEvent.cs  CudaException.cs  CudaGraph.cs  CudaGraphInstance.cs  CudaStream.cs
source/Zen.Inference/: IModel.cs  LinearLayer.cs  ModelExtensions.cs  Sequential.cs  Zen.Inference.csproj
source/Zen.Playground/: Program.cs
source/Zen.Playground/Examples/: ConvolutionExample.cs  EventExample.cs  (+5 more)
(+2 files in other folders)
